Don't include non-tax related transactions in tax report

BUG: 441023
FIXED-IN: 5.2